--- a/index.html
+++ b/index.html
@@ -113,7 +113,28 @@
           </ul>
         </div>
       </div> 
-       
+      <!-- banner -->
+      <section class="m-5 lg:m-0">
+        <div class="flex justify-center items-center">
+          <img src="./assets/banner.png" alt="" />
+        </div>
+        <div class="lg:flex flex-col justify-center items-center text-center space-y-6 mt-6">
+          <h3 class="text-4xl lg:text-6xl font-bold text-font-primary lg:w-3/4">
+            A barn house of this design has a striking appearance
+          </h3>
+          <p class="text-font-secondary1 lg:w-2/3">
+            The barn house captivates with its blend of rustic charm and modern
+            sophistication, featuring weathered wood, sleek metal
+            accents, and large windows that flood the space with natural light.
+          </p>
+          <a class="btn bg-web-secondary1 text-lg font-semibold rounded-full w-fit">
+            <h3>View Details</h3><span class="bg-web-primary rounded-full p-2"><svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 14 14" fill="none">
+              <path d="M12.0016 1.74121L0.997989 12.7375" stroke="#1C1C1C" stroke-width="1.5" stroke-linecap="round"/>
+              <path d="M6.00191 0.87079C6.00191 0.87079 11.6356 0.397774 12.4903 1.25297C13.3449 2.10817 12.868 7.74156 12.868 7.74156" stroke="#1C1C1C" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+            </svg></span>
+          </a>
+        </div>
+      </section>       
     </header>
   </body>
 </html>
