--- a/index.html
+++ b/index.html
@@ -136,5 +136,93 @@
         </div>
       </section>       
     </header>
+    <!-- main section -->
+    <main class="mx-auto mt-20">
+      <!-- About us -->
+      <section class="bg-background-color pb-20">
+        <div class="max-w-screen-xl mx-auto px-5 py-10 lg:px-10 lg:py-16 mb-10">
+          <div class="hidden lg:flex relative -left-10 pb-5">
+            <img class="w-[100px]" src="./assets/Vector.png" alt="">
+          </div>
+          <div class="grid grid-cols-1 lg:grid-cols-2 gap-10">
+            <div>
+              <div class="text-center lg:text-start">
+                <a class="btn bg-white text-lg font-semibold rounded-full w-fit px-5"><span><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
+                  <path d="M16.5564 9.00278H1.00002" stroke="#494949" stroke-width="1.5" stroke-linecap="round"/>
+                  <path d="M12.9279 4.14623C12.9279 4.14623 17.2472 7.79392 17.2472 9.00301C17.2472 10.212 12.9278 13.8597 12.9278 13.8597" stroke="#494949" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                </svg></span><h3>About Us</h3>
+                </a>
+              </div>
+              <div class="text-center lg:text-start space-y-5">
+                <h2 class="text-4xl text-font-primary font-bold mt-5">We design thoughtful,<br> liveable spaces</h2>
+              <p class="text-font-secondary1">The barn house captivates with its blend of rustic charm and 
+              modern sophistication, featuring weathered wood, sleek metal accents.</p>
+              </div>
+              <!-- Commercial -->
+            <div class="flex gap-6 bg-white rounded-xl p-8 mt-5">
+              <div>
+                <svg xmlns="http://www.w3.org/2000/svg" width="64" height="65" viewBox="0 0 64 65" fill="none">
+                  <mask id="mask0_1_3532" style="mask-type:luminance" maskUnits="userSpaceOnUse" x="0" y="0" width="64" height="65">
+                    <path d="M0 0.449959H64V64.45H0V0.449959Z" fill="white"/>
+                  </mask>
+                  <g mask="url(#mask0_1_3532)">
+                    <path d="M50.3667 19.9016H58.367C59.0973 19.9016 59.6893 20.4935 59.6893 21.2237V61.7568H45.9884V19.9016" stroke="#494949" stroke-width="2" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                    <path d="M3.77124 55.6733V16.2296C3.77124 15.4996 4.36374 14.9083 5.09374 14.9083H23.9275V28.7246" stroke="#494949" stroke-width="2" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                    <path d="M3.77124 61.7571H17.0762H23.9275" stroke="#494949" stroke-width="2" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                    <path d="M23.9275 61.7568H17.0762H2.26C1.53 61.7568 0.9375 61.1643 0.9375 60.4343V56.9956C0.9375 56.2656 1.53 55.6731 2.26 55.6731H17.0762" stroke="#494949" stroke-width="2" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                    <path d="M10.5141 9.70883H23.927V14.908H9.19189V11.0311C9.19189 10.3008 9.78389 9.70883 10.5141 9.70883Z" stroke="#494949" stroke-width="2" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                    <path d="M23.9275 28.7246V4.37833C23.9275 3.49708 24.8225 2.90084 25.635 3.23959L45.175 11.3833C45.6675 11.5883 45.9887 12.0696 45.9887 12.6033V61.7571H30.7775H23.9275" stroke="#494949" stroke-width="2" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                    <path d="M17.0767 4.92962V9.70874" stroke="#494949" stroke-width="2" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                    <path d="M63.0625 61.7566H59.6892" stroke="#494949" stroke-width="2" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                    <path d="M11.3834 20.0781H23.927" stroke="#494949" stroke-width="2" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                    <path d="M3.77124 20.0781H7.01724" stroke="#494949" stroke-width="2" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                    <path d="M3.77124 28.7246H23.9271" stroke="#494949" stroke-width="2" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                    <path d="M17.0762 37.8708H3.77124" stroke="#494949" stroke-width="2" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                    <path d="M17.0762 47.0183H3.77124" stroke="#494949" stroke-width="2" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                    <path d="M30.7775 61.7568H17.0767V30.3208C17.0767 29.4393 17.7913 28.7247 18.6728 28.7247H29.1814C30.063 28.7247 30.7775 29.4393 30.7775 30.3208V61.7568Z" stroke="#494949" stroke-width="2" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                    <path d="M45.9884 29.8975H54.078C54.5177 29.8975 54.874 29.5411 54.874 29.1015V26.884C54.874 26.4443 54.5177 26.088 54.078 26.088H45.9884V29.8975Z" stroke="#494949" stroke-width="2" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                    <path d="M45.9884 38.3323H54.078C54.5177 38.3323 54.874 37.9759 54.874 37.5363V35.3189C54.874 34.8792 54.5177 34.5228 54.078 34.5228H45.9884V38.3323Z" stroke="#494949" stroke-width="2" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                    <path d="M45.9884 46.7673H54.078C54.5177 46.7673 54.874 46.411 54.874 45.9713V43.754C54.874 43.3142 54.5177 42.958 54.078 42.958H45.9884V46.7673Z" stroke="#494949" stroke-width="2" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                    <path d="M45.9884 55.2024H54.078C54.5177 55.2024 54.874 54.846 54.874 54.4064V52.1889C54.874 51.7493 54.5177 51.3929 54.078 51.3929H45.9884V55.2024Z" stroke="#494949" stroke-width="2" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                    <path d="M37.2579 55.3416V61.7566" stroke="#494949" stroke-width="2" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                    <path d="M37.2579 8.08332V50.9453" stroke="#494949" stroke-width="2" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                    <path d="M21.7552 32.8933V34.8979" stroke="#494949" stroke-width="2" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                    <path d="M26.064 32.8933V34.8979" stroke="#494949" stroke-width="2" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                    <path d="M21.7552 39.8975V41.9021" stroke="#494949" stroke-width="2" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                    <path d="M26.064 39.8975V41.9021" stroke="#494949" stroke-width="2" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                    <path d="M21.7552 46.9016V48.9062" stroke="#494949" stroke-width="2" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                    <path d="M26.064 46.9016V48.9062" stroke="#494949" stroke-width="2" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                    <path d="M21.7552 53.9058V55.9104" stroke="#494949" stroke-width="2" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                    <path d="M26.064 53.9058V55.9104" stroke="#494949" stroke-width="2" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                  </g>
+                </svg>
+              </div>
+              <div>
+                <h5 class="text-xl font-semibold mb-2">Commercial</h5>
+                <p class="text-font-secondary2">The barn house captivates with its blend of rustic charm and modern.</p>
+              </div>
+            </div>
+            <!-- Residential -->
+            <div class="flex gap-6 bg-white rounded-xl p-6 mt-5">
+              <div>
+                <svg xmlns="http://www.w3.org/2000/svg" width="64" height="65" viewBox="0 0 64 65" fill="none">
+                  <path d="M61 56.595H60C59.99 55.9293 59.8486 55.2721 59.584 54.6612C59.3194 54.0502 58.9367 53.4976 58.458 53.0349C57.7689 52.3366 56.8843 51.8635 55.9209 51.678C55.4729 50.7539 54.7737 49.9746 53.9035 49.4294C53.0332 48.8841 52.027 48.595 51 48.595C49.973 48.595 48.9668 48.8841 48.0965 49.4294C47.2263 49.9746 46.5271 50.7539 46.0791 51.678C45.1157 51.8635 44.2311 52.3366 43.542 53.0349C43.0633 53.4976 42.6806 54.0502 42.416 54.6612C42.1514 55.2721 42.01 55.9293 42 56.595H30V33.595C30 33.3298 29.8946 33.0754 29.7071 32.8879C29.5196 32.7003 29.2652 32.595 29 32.595H15C14.7348 32.595 14.4804 32.7003 14.2929 32.8879C14.1054 33.0754 14 33.3298 14 33.595V56.595H10V28.9633L32 10.8894L54 28.9633V46.595C54 46.8602 54.1054 47.1145 54.2929 47.3021C54.4804 47.4896 54.7348 47.595 55 47.595C55.2652 47.595 55.5196 47.4896 55.7071 47.3021C55.8946 47.1145 56 46.8602 56 46.595V30.6064L56.9751 31.4075C57.1786 31.5748 57.4399 31.6551 57.7023 31.6307C57.9646 31.6064 58.2067 31.4795 58.376 31.2776L61.7661 27.2376C61.851 27.1363 61.915 27.0192 61.9544 26.893C61.9938 26.7668 62.0078 26.6341 61.9956 26.5024C61.9834 26.3708 61.9452 26.2429 61.8833 26.1261C61.8213 26.0094 61.7369 25.906 61.6348 25.8221L56 21.1934V4.59497C55.9995 4.0647 55.7886 3.5563 55.4136 3.18134C55.0387 2.80638 54.5303 2.5955 54 2.59497H46C45.4697 2.5955 44.9613 2.80638 44.5864 3.18134C44.2114 3.5563 44.0005 4.0647 44 4.59497V11.3362L34.4077 3.45679C33.7213 2.91684 32.8733 2.62329 32 2.62329C31.1267 2.62329 30.2787 2.91684 29.5923 3.45679L2.36523 25.822C2.26312 25.9059 2.17866 26.0093 2.11673 26.1261C2.0548 26.2428 2.01663 26.3707 2.00441 26.5023C1.9922 26.634 2.00619 26.7667 2.04558 26.8929C2.08497 27.0191 2.14897 27.1362 2.23389 27.2375L5.62402 31.2775C5.79327 31.4794 6.03539 31.6063 6.29774 31.6307C6.56008 31.655 6.82142 31.5747 7.0249 31.4074L8 30.6064V56.595H3C2.73478 56.595 2.48043 56.7003 2.29289 56.8879C2.10536 57.0754 2 57.3298 2 57.595V61.595C2 61.8602 2.10536 62.1145 2.29289 62.3021C2.48043 62.4896 2.73478 62.595 3 62.595H61C61.2652 62.595 61.5196 62.4896 61.7071 62.3021C61.8946 62.1145 62 61.8602 62 61.595V57.595C62 57.3298 61.8946 57.0754 61.7071 56.8879C61.5196 56.7003 61.2652 56.595 61 56.595ZM46 4.59497H54V19.5505L46 12.9791V4.59497ZM6.52 29.2341L4.41553 26.7263L30.8618 5.00268C31.1861 4.74697 31.587 4.60791 32 4.60791C32.413 4.60791 32.8139 4.74697 33.1382 5.00268L59.5845 26.7263L57.48 29.2341L32.6348 8.82251C32.4559 8.6754 32.2316 8.59497 32 8.59497C31.7684 8.59497 31.5441 8.6754 31.3652 8.82251L6.52 29.2341ZM44.9458 54.4597C45.4149 53.9546 46.0634 53.6538 46.7519 53.6218C46.9621 53.625 47.1679 53.5619 47.3401 53.4414C47.5123 53.321 47.6423 53.1494 47.7114 52.9509C47.9448 52.2639 48.3875 51.6673 48.9773 51.2447C49.5671 50.8222 50.2744 50.595 51 50.595C51.7256 50.595 52.4329 50.8222 53.0227 51.2447C53.6125 51.6673 54.0552 52.2639 54.2886 52.9509C54.3555 53.1508 54.4849 53.3238 54.6577 53.4446C54.8304 53.5654 55.0374 53.6275 55.2481 53.6218C55.9348 53.6609 56.5808 53.9606 57.0542 54.4597C57.3445 54.736 57.5775 55.0668 57.7398 55.4332C57.902 55.7995 57.9905 56.1944 58 56.595H44C44.0095 56.1944 44.098 55.7995 44.2602 55.4332C44.4225 55.0668 44.6555 54.736 44.9458 54.4597ZM16 34.595H28V56.595H16V34.595ZM60 60.595H4V58.595H60V60.595ZM35 32.595C34.7348 32.595 34.4804 32.7003 34.2929 32.8879C34.1054 33.0754 34 33.3298 34 33.595V45.595C34 45.8602 34.1054 46.1145 34.2929 46.3021C34.4804 46.4896 34.7348 46.595 35 46.595H49C49.2652 46.595 49.5196 46.4896 49.7071 46.3021C49.8946 46.1145 50 45.8602 50 45.595V33.595C50 33.3298 49.8946 33.0754 49.7071 32.8879C49.5196 32.7003 49.2652 32.595 49 32.595H35ZM48 38.595H43V34.595H48V38.595ZM41 34.595V38.595H36V34.595H41ZM36 40.595H41V44.595H36V40.595ZM43 44.595V40.595H48V44.595H43Z" fill="#494949"/>
+                </svg>
+              </div>
+              <div>
+                <h5 class="text-xl font-semibold mb-2">Residential</h5>
+                <p class="text-font-secondary2">The barn house captivates with its blend of rustic charm and modern.</p>
+              </div>
+            </div>
+
+            </div>
+            <!-- Image -->
+            <div>
+              <img src="./assets/Rectangle.png" alt="">
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
