portfolio (challenge part) added

--- a/index.html
+++ b/index.html
@@ -330,6 +330,102 @@
           </div>
         </div>  
       </section>
+      <!-- Portfolio section -->
+      <section class="mt-10">
+        <div class="max-w-screen-xl mx-auto px-5 py-10 lg:py-28">
+          <div class="text-center">
+            <a class="btn bg-web-secondary2 text-lg font-semibold rounded-full w-fit px-5"><span><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
+              <path d="M16.5564 9.00278H1.00002" stroke="#494949" stroke-width="1.5" stroke-linecap="round"/>
+              <path d="M12.9279 4.14623C12.9279 4.14623 17.2472 7.79392 17.2472 9.00301C17.2472 10.212 12.9278 13.8597 12.9278 13.8597" stroke="#494949" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+            </svg></span><h3>Explore our Latest works</h3>
+            </a>
+          </div>
+          <div class="text-center mt-5">
+          <h2 class="text-4xl font-bold mb-5">Our Latest Portfolio</h2>
+          <p class="text-center mb-10">The barn house captivates with its blend of rustic charm and modern sophistication, <br> featuring weathered wood, sleek metal accents.</p>
+          </div>
+          <!-- card section -->
+          <div class="grid grid-cols-1 lg:grid-cols-3 gap-5 mb-5">
+              <div class="grid grid-cols-1 col-span-2 lg:flex items-center gap-6 bg-white border border-gray-200 rounded-xl p-5">
+                <div>
+                  <img class="w-[600px]" src="./assets/img1.png" alt="">
+                </div>
+                <div>
+                  <h5 class="text-xl font-bold my-2">Commercial</h5>
+                  <p class="text-text-primary1">The barn house captivates with its blend of rustic charm and modern. The barn house captivates with its blend of rustic charm and modern .</p>
+                  <div class="flex my-2">
+                    <p class="text-xl font-bold mr-2">View Details</p>
+                    <span class="bg-web-primary rounded-full p-2 ml-1"
+                  ><svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="14"
+                    height="14"
+                    viewBox="0 0 14 14"
+                    fill="none"
+                  >
+                    <path
+                      d="M12.0016 1.74121L0.997989 12.7375"
+                      stroke="#1C1C1C"
+                      stroke-width="1.5"
+                      stroke-linecap="round"
+                    />
+                    <path
+                      d="M6.00191 0.87079C6.00191 0.87079 11.6356 0.397774 12.4903 1.25297C13.3449 2.10817 12.868 7.74156 12.868 7.74156"
+                      stroke="#1C1C1C"
+                      stroke-width="1.5"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                    /></svg></span>
+                  </div>
+                </div>
+               </div>
+               <div class="flex items-center justify-center lg:col-span-1 bg-white border border-gray-200 rounded-xl p-5">
+                <img class="w-full" src="./assets/img2.png" alt="">
+               </div>  
+          </div>
+          <div class="grid grid-cols-1 lg:grid-cols-4 gap-5 mb-20">
+            <div class="flex items-center justify-center lg:col-span-1 bg-white border border-gray-200 rounded-xl p-5">
+              <img class="w-full" src="./assets/img3.png" alt="">
+             </div>
+             <div class="grid grid-cols-1 col-span-2 lg:flex items-center gap-6 bg-white border border-gray-200 rounded-xl p-4">
+              <div>
+                <img class="w-[950px]" src="./assets/img4.png" alt="">
+              </div>
+              <div>
+                <h5 class="text-xl font-bold my-2">Commercial</h5>
+                <p class="text-text-primary1">The barn house captivates with its blend of rustic charm and modern. The barn house captivates with its blend of rustic charm and modern .</p>
+                <div class="flex my-2">
+                  <p class="text-xl font-bold mr-2">View Details</p>
+                  <span class="bg-web-primary rounded-full p-2 ml-1"
+                ><svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="14"
+                  height="14"
+                  viewBox="0 0 14 14"
+                  fill="none"
+                >
+                  <path
+                    d="M12.0016 1.74121L0.997989 12.7375"
+                    stroke="#1C1C1C"
+                    stroke-width="1.5"
+                    stroke-linecap="round"
+                  />
+                  <path
+                    d="M6.00191 0.87079C6.00191 0.87079 11.6356 0.397774 12.4903 1.25297C13.3449 2.10817 12.868 7.74156 12.868 7.74156"
+                    stroke="#1C1C1C"
+                    stroke-width="1.5"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  /></svg></span>
+                </div>
+              </div>
+             </div>
+             <div class="flex items-center justify-center lg:col-span-1 bg-white border border-gray-200 rounded-xl p-5">
+              <img class="w-full" src="./assets/img5.png" alt="">
+             </div>
+          </div>
+        </div>
+      </section>
       
     </main>
   </body>
