--- a/index.html
+++ b/index.html
@@ -426,7 +426,94 @@
           </div>
         </div>
       </section>
-      
+      <section>
+        <div class="max-w-screen-xl mx-auto px-5 py-10 lg:py-10">
+          <div class="text-center">
+            <a class="btn bg-web-secondary2 text-lg font-semibold rounded-full w-fit px-5"><span><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
+              <path d="M16.5564 9.00278H1.00002" stroke="#494949" stroke-width="1.5" stroke-linecap="round"/>
+              <path d="M12.9279 4.14623C12.9279 4.14623 17.2472 7.79392 17.2472 9.00301C17.2472 10.212 12.9278 13.8597 12.9278 13.8597" stroke="#494949" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+            </svg></span><h3>Client Reviews</h3>
+            </a>
+          </div>
+          <div class="text-center mt-5">
+          <h2 class="text-4xl font-bold mb-5">What Our Client says?</h2>
+          <p class="text-center mb-10">The barn house captivates with its blend of rustic charm and modern sophistication, <br> featuring weathered wood, sleek metal accents.</p>
+          </div>
+          <!-- review -->
+        <div class="grid grid-cols-1 lg:grid-cols-2 gap-10">
+          <div class="card card-side bg-base-100 shadow-xl">
+            <figure>
+              <img class="w-[550px]"
+                src="./assets/person-1.jpg"
+                alt="Movie" />
+            </figure>
+            <div class="card-body">
+              <h2 class="card-title">Jhone Smith</h2>
+              <p>Very satisfied with their work. <br> I would love to work with them again. Highly recommended. Unique and design...</p>
+              <div class="flex my-2">
+                <p class="text-xl font-bold">View More</p>
+                <span class="bg-web-primary rounded-full p-2"
+              ><svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="14"
+                height="14"
+                viewBox="0 0 14 14"
+                fill="none"
+              >
+                <path
+                  d="M12.0016 1.74121L0.997989 12.7375"
+                  stroke="#1C1C1C"
+                  stroke-width="1.5"
+                  stroke-linecap="round"
+                />
+                <path
+                  d="M6.00191 0.87079C6.00191 0.87079 11.6356 0.397774 12.4903 1.25297C13.3449 2.10817 12.868 7.74156 12.868 7.74156"
+                  stroke="#1C1C1C"
+                  stroke-width="1.5"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                /></svg></span>
+              </div>
+            </div>
+          </div>
+          <div class="card card-side bg-base-100 shadow-xl">
+            <figure>
+              <img class="w-[595px] h-[360px]"
+                src="./assets/person-3.jpg"
+                alt="Movie" />
+            </figure>
+            <div class="card-body">
+              <h2 class="card-title">Jhone Smith</h2>
+              <p class="">Very satisfied with their work. <br> I would love to work with them again. Highly recommended. Unique and design...</p>
+              <div class="flex my-2">
+                <p class="text-xl font-bold">View More</p>
+                <span class="bg-web-primary rounded-full p-2"
+              ><svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="14"
+                height="14"
+                viewBox="0 0 14 14"
+                fill="none"
+              >
+                <path
+                  d="M12.0016 1.74121L0.997989 12.7375"
+                  stroke="#1C1C1C"
+                  stroke-width="1.5"
+                  stroke-linecap="round"
+                />
+                <path
+                  d="M6.00191 0.87079C6.00191 0.87079 11.6356 0.397774 12.4903 1.25297C13.3449 2.10817 12.868 7.74156 12.868 7.74156"
+                  stroke="#1C1C1C"
+                  stroke-width="1.5"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                /></svg></span>
+              </div>
+            </div>
+          </div>
+        </div>
+        
+      </section>
     </main>
   </body>
 </html>
