next project & footer added

--- a/index.html
+++ b/index.html
@@ -40,13 +40,14 @@
               "card-bg2": "#EFDA6E",
               "card-bg3": "#A4DAC3",
               "card-bg4": "#77AAEA",
+              "footer-font": "#E9E9E9",
             },
           },
         },
       };
     </script>
   </head>
-  <body class=".font-manrope mx-auto my-10">
+  <body class=".font-manrope mx-auto mt-10">
     <!-- header section -->
 
     <header class="max-w-screen-xl mx-auto">
@@ -426,7 +427,8 @@
           </div>
         </div>
       </section>
-      <section>
+      <!-- Client review -->
+      <section class="mb-20">
         <div class="max-w-screen-xl mx-auto px-5 py-10 lg:py-10">
           <div class="text-center">
             <a class="btn bg-web-secondary2 text-lg font-semibold rounded-full w-fit px-5"><span><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
@@ -512,8 +514,80 @@
             </div>
           </div>
         </div>
-        
       </section>
+      <!-- Next project -->
+       <section style="background-image: url(./assets/bg.jpg);" class="bg-no-repeat bg-cover py-20">
+        <div class="max-w-screen-xl mx-auto px-5 py-10 lg:py-10">
+          <div class="text-center">
+            <a class="btn bg-web-secondary2 text-lg font-semibold rounded-full w-fit px-5"><span><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
+              <path d="M16.5564 9.00278H1.00002" stroke="#494949" stroke-width="1.5" stroke-linecap="round"/>
+              <path d="M12.9279 4.14623C12.9279 4.14623 17.2472 7.79392 17.2472 9.00301C17.2472 10.212 12.9278 13.8597 12.9278 13.8597" stroke="#494949" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+            </svg></span><h3>Let’s Connect</h3>
+            </a>
+          </div>
+          <div class="text-center mt-5">
+          <h2 class="text-4xl font-bold mb-5">Let’s Discuss Next Project</h2>
+          <p class="text-center mb-10">The barn house captivates with its blend of rustic charm and modern sophistication, <br> featuring weathered wood, sleek metal accents.</p>
+          </div>
+          <div class="grid grid-cols-1 gap-5 lg:flex justify-center">
+            <div class="space-y-4">
+              <div class="flex items-center w-full lg:w-96 input rounded-full">
+                <input type="text" placeholder="First Name*"/>
+              </div>
+              <div class="flex items-center w-full lg:w-96 input rounded-full">
+                <input type="text" placeholder="Last Name*"/>
+              </div>
+            </div>
+            <div class="space-y-4">
+              <div class="flex items-center w-full lg:w-96 input rounded-full">
+                <input type="text" placeholder="Phone Number*"/>
+              </div>
+              <div class="flex items-center w-full lg:w-96 input rounded-full">
+                <input type="text" placeholder="Email Number*"/>
+              </div>
+            </div>
+          </div>
+          <div class="flex justify-center mt-6">
+            <textarea class="w-[790px] h-[240px] rounded-3xl p-4" placeholder="Write your message here"></textarea>
+          </div>
+          <div class="flex justify-center mt-6">
+            <a class="btn w-[790px] lg:flex bg-web-primary text-lg font-semibold rounded-full">
+              <h3>Send Mail</h3><span class="bg-black rounded-full p-2"><svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 14 14" fill="none">
+                <path d="M12.0109 2.10278L1.00728 13.0991" stroke="white" stroke-width="1.5" stroke-linecap="round"/>
+                <path d="M6.01123 1.23212C6.01123 1.23212 11.6449 0.759102 12.4996 1.6143C13.3542 2.4695 12.8773 8.10289 12.8773 8.10289" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+              </svg></span>
+            </a>
+          </div>
+        </div>
+       </section>
     </main>
+    <footer class="bg-black py-20">
+      <section>
+        <div class="text-center space-y-4">
+          <a class="btn btn-ghost text-xl">
+            <span class="bg-web-primary rounded-full p-2"><svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 14 14" fill="none">
+              <path d="M12.007 2.05932L1.0033 13.0557" stroke="#1C1C1C" stroke-width="1.5" stroke-linecap="round"/>
+              <path d="M6.00728 1.18866C6.00728 1.18866 11.6409 0.715645 12.4957 1.57084C13.3503 2.42604 12.8734 8.05944 12.8734 8.05944" stroke="#1C1C1C" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+            </svg></span><h3 class="text-2xl font-bold lg:text-3xl text-white">Renterio</h3>
+          </a>
+          <p class="text-font-secondary2">The barn house captivates with its blend of rustic charm and modern sophistication, <br> featuring weathered wood, sleek metal accents.</p>
+        </div>
+        <div class="grid grid-cols-1 lg:flex justify-center gap-28 text-footer-font mt-12">
+          <a href="">Home</a>
+          <a href="">Services</a>
+          <a href="">Portfolio</a>
+          <a href="">Blogs</a>
+          <a href="">Contact Us</a>
+        </div>
+        <div class="flex justify-center mt-16">
+          <a class="btn lg:flex bg-web-primary text-lg font-semibold rounded-full">
+            <h3>Book Consult</h3><span class="bg-black rounded-full p-2"><svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 14 14" fill="none">
+              <path d="M12.0109 2.10278L1.00728 13.0991" stroke="white" stroke-width="1.5" stroke-linecap="round"/>
+              <path d="M6.01123 1.23212C6.01123 1.23212 11.6449 0.759102 12.4996 1.6143C13.3542 2.4695 12.8773 8.10289 12.8773 8.10289" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+            </svg></span>
+          </a>
+        </div>
+      </section>
+    </footer>
   </body>
 </html>
