--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         <div class="flex justify-center items-center">
           <img src="./assets/banner.png" alt="" />
         </div>
-        <div class="lg:flex flex-col justify-center items-center text-center space-y-6 mt-6">
+        <div class="lg:flex flex-col justify-center items-center text-center space-y-8 mt-6">
           <h3 class="text-4xl lg:text-6xl font-bold text-font-primary lg:w-3/4">
             A barn house of this design has a striking appearance
           </h3>
@@ -333,7 +333,7 @@
       </section>
       <!-- Portfolio section -->
       <section class="mt-10">
-        <div class="max-w-screen-xl mx-auto px-5 py-10 lg:py-28">
+        <div class="max-w-screen-xl mx-auto px-5 py-10 lg:pt-28 lg:pb-16">
           <div class="text-center">
             <a class="btn bg-web-secondary2 text-lg font-semibold rounded-full w-fit px-5"><span><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
               <path d="M16.5564 9.00278H1.00002" stroke="#494949" stroke-width="1.5" stroke-linecap="round"/>
@@ -342,8 +342,8 @@
             </a>
           </div>
           <div class="text-center mt-5">
-          <h2 class="text-4xl font-bold mb-5">Our Latest Portfolio</h2>
-          <p class="text-center mb-10">The barn house captivates with its blend of rustic charm and modern sophistication, <br> featuring weathered wood, sleek metal accents.</p>
+          <h2 class="text-4xl font-bold mb-6">Our Latest Portfolio</h2>
+          <p class="text-center lg:w-3/5 mb-10 mx-auto">Portfolio is a collection of investments that an investor holds with the goal of minimizing risk through investment diversification.</p>
           </div>
           <!-- card section -->
           <div class="grid grid-cols-1 lg:grid-cols-3 gap-5 mb-5">
@@ -439,7 +439,7 @@
           </div>
           <div class="text-center mt-5">
           <h2 class="text-4xl font-bold mb-5">What Our Client says?</h2>
-          <p class="text-center mb-10">The barn house captivates with its blend of rustic charm and modern sophistication, <br> featuring weathered wood, sleek metal accents.</p>
+          <p class="text-center lg:w-3/5 mb-10 mx-auto"> Review should contain factual information about the product, service, and any specific detail that can help other people make better purchase decisions.</p>
           </div>
           <!-- review -->
         <div class="grid grid-cols-1 lg:grid-cols-2 gap-10">
@@ -450,8 +450,8 @@
                 alt="Movie" />
             </figure>
             <div class="card-body">
-              <h2 class="card-title">Jhone Smith</h2>
-              <p>Very satisfied with their work. <br> I would love to work with them again. Highly recommended. Unique and design...</p>
+              <h2 class="card-title mb-4">Jhone Smith</h2>
+              <p>Very satisfied with their work. <br> I would love to work with them again. Highly recommended. Unique and simple design...</p>
               <div class="flex my-2">
                 <p class="text-xl font-bold">View More</p>
                 <span class="bg-web-primary rounded-full p-2"
@@ -481,12 +481,12 @@
           <div class="card card-side bg-base-100 shadow-xl">
             <figure>
               <img class="w-[595px] h-[360px]"
-                src="./assets/person-3.jpg"
+                src="./assets/person-2.jpg"
                 alt="Movie" />
             </figure>
             <div class="card-body">
-              <h2 class="card-title">Jhone Smith</h2>
-              <p class="">Very satisfied with their work. <br> I would love to work with them again. Highly recommended. Unique and design...</p>
+              <h2 class="card-title mb-4">David Anderson</h2>
+              <p class="">Very satisfied with their work. <br> I would love to work with them again. Highly recommended. Unique and simple design...</p>
               <div class="flex my-2">
                 <p class="text-xl font-bold">View More</p>
                 <span class="bg-web-primary rounded-full p-2"
@@ -527,7 +527,7 @@
           </div>
           <div class="text-center mt-5">
           <h2 class="text-4xl font-bold mb-5">Let’s Discuss Next Project</h2>
-          <p class="text-center mb-10">The barn house captivates with its blend of rustic charm and modern sophistication, <br> featuring weathered wood, sleek metal accents.</p>
+          <p class="text-center lg:w-3/5 mb-10 mx-auto">Project descriptions provide team members and stakeholders with an overview of team projects. Our team is always there for you to take your to next level.</p>
           </div>
           <div class="grid grid-cols-1 gap-5 lg:flex justify-center">
             <div class="space-y-4">
@@ -551,7 +551,7 @@
             <textarea class="w-[790px] h-[240px] rounded-3xl p-4" placeholder="Write your message here"></textarea>
           </div>
           <div class="flex justify-center mt-6">
-            <a class="btn w-[790px] lg:flex bg-web-primary text-lg font-semibold rounded-full">
+            <a class="btn w-[380px] lg:w-[790px] lg:flex bg-web-primary text-lg font-semibold rounded-full">
               <h3>Send Mail</h3><span class="bg-black rounded-full p-2"><svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 14 14" fill="none">
                 <path d="M12.0109 2.10278L1.00728 13.0991" stroke="white" stroke-width="1.5" stroke-linecap="round"/>
                 <path d="M6.01123 1.23212C6.01123 1.23212 11.6449 0.759102 12.4996 1.6143C13.3542 2.4695 12.8773 8.10289 12.8773 8.10289" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
@@ -561,18 +561,19 @@
         </div>
        </section>
     </main>
+    <!-- footer section -->
     <footer class="bg-black py-20">
       <section>
-        <div class="text-center space-y-4">
+        <div class="text-center space-y-3">
           <a class="btn btn-ghost text-xl">
             <span class="bg-web-primary rounded-full p-2"><svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 14 14" fill="none">
               <path d="M12.007 2.05932L1.0033 13.0557" stroke="#1C1C1C" stroke-width="1.5" stroke-linecap="round"/>
               <path d="M6.00728 1.18866C6.00728 1.18866 11.6409 0.715645 12.4957 1.57084C13.3503 2.42604 12.8734 8.05944 12.8734 8.05944" stroke="#1C1C1C" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
             </svg></span><h3 class="text-2xl font-bold lg:text-3xl text-white">Renterio</h3>
           </a>
-          <p class="text-font-secondary2">The barn house captivates with its blend of rustic charm and modern sophistication, <br> featuring weathered wood, sleek metal accents.</p>
+          <p class="text-font-secondary2 p-6 lg:p-2 lg:w-3/6 mx-auto">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
         </div>
-        <div class="grid grid-cols-1 lg:flex justify-center gap-28 text-footer-font mt-12">
+        <div class="grid grid-cols-1 text-center gap-5 lg:flex justify-center lg:gap-28 text-footer-font mt-12">
           <a href="">Home</a>
           <a href="">Services</a>
           <a href="">Portfolio</a>
