data theme added

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -452,7 +452,7 @@
             <div class="card-body">
               <h2 class="card-title mb-4">Jhone Smith</h2>
               <p>Very satisfied with their work. <br> I would love to work with them again. Highly recommended. Unique and simple design...</p>
-              <div class="flex my-2">
+              <div class="w-[140px] flex my-2">
                 <p class="text-xl font-bold">View More</p>
                 <span class="bg-web-primary rounded-full p-2"
               ><svg
@@ -487,7 +487,7 @@
             <div class="card-body">
               <h2 class="card-title mb-4">David Anderson</h2>
               <p class="">Very satisfied with their work. <br> I would love to work with them again. Highly recommended. Unique and simple design...</p>
-              <div class="flex my-2">
+              <div class="w-[140px] flex my-2">
                 <p class="text-xl font-bold">View More</p>
                 <span class="bg-web-primary rounded-full p-2"
               ><svg
