menu button updated

--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
             </svg></span>
           </a>
         </div>
-        <div class="dropdown ml-32 absolute right-10">
-          <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+        <div class="dropdown ml-32 absolute right-6">
+          <div tabindex="0" role="button" class="btn btn-circle btn-ghost lg:hidden bg-white border border-gray-200 rounded-full">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               class="h-5 w-5"
@@ -154,7 +154,7 @@
                 </svg></span><h3>About Us</h3>
                 </a>
               </div>
-              <div class="text-center lg:text-start space-y-5">
+              <div class="text-center lg:text-start space-y-6">
                 <h2 class="text-4xl text-font-primary font-bold mt-5">We design thoughtful,<br> liveable spaces</h2>
               <p class="text-font-secondary1">The barn house captivates with its blend of rustic charm and 
               modern sophistication, featuring weathered wood, sleek metal accents.</p>
